# unforget

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
tests/: test_cli_security.py  test_config.py  test_context.py  test_safety.py  test_scrubber.py  test_setup_models.py
unforget/: cli.py  config.py
unforget/core/: __init__.py  context.py  llm.py  safety.py  scrubber.py
unforget/integrations/: unforget.bash  unforget.fish  unforget.zsh
